--- a/src/styles.css
+++ b/src/styles.css
@@ -25,3 +25,14 @@ tr:first-child {
 tr:nth-child(3n) td {
   border-bottom:solid ;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/ Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
